<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_puzzle"
            android:title="@string/menu_games" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_book" />
    </group>

    <item android:title="Eletronics">
        <menu>
            <item
                android:id="@+id/nav_computer"
                android:icon="@drawable/ic_notebook"
                android:title="@string/menu_computer" />
            <item
                android:id="@+id/nav_smartphone"
                android:icon="@drawable/ic_smartphone"
                android:title="@string/menu_smartphone" />
        </menu>
    </item>


</menu>
